# stm32H743ZI-playground

./: Cargo.toml  README.md  flasher.conf  ozone.jdebug  reset.jlink
.cargo/: config
src/: main.rs  main_old.rs
src/network/: bare_metal_websocket.rs  config.rs  mod.rs  net.rs  websocket.rs
src/utilities/: logger.rs  mod.rs
