[package]
authors = ["Matvei <klimatt.gu@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stm32h743zi_playground"
version = "0.1.0"

[dependencies]
stm32h7xx-hal = {version = "0.10.0", features = ["stm32h743v", "rt", "log-rtt", "ethernet"]}

[dependencies.embedded-hal]
version = "0.2.4"

[dependencies.cortex-m]
version = "^0.7.1"

[dependencies.cortex-m-rt]
version = "^0.6.12"

[dependencies.cfg-if]
version = "0.1.10"

[dependencies.cortex-m-log]
version = "~0.7.0"
features = ["itm", "semihosting", "log-integration"]

[dependencies.cortex-m-rtic]
version = "0.6.0-rc.2"

[dependencies.cortex-m-semihosting]
version = "0.3.5"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.log]
version = "0.4.11"

[dependecies.panic-itm]
version = "~0.4.1"

#[dependencies.panic-rtt-target]
#version = "0.1.0"
#features = ["cortex-m"]

[dependencies.rtt-target]
version = "0.2.2"
features = ["cortex-m"]

[dependencies.smoltcp]
version = "0.7.0"
features = ["ethernet", "proto-ipv4", "proto-ipv6", "socket-raw",  "socket-udp", "socket-tcp"]
default-features = false

[dependencies.tim-systick-monotonic]
path = "../tim-systick-monotonic"
features = ["h743v-tim15-tim17"]

#[dependencies.dwt-systick-monotonic]
#ersion = "0.1.0-rc.1"
#path = "../dwt-systick-monotonic"
#[patch."https://github.com/vhrdtech/vhrd-module-nvconfig.git"]
#vhrd-module-nvconfig = { path = "../vhrd-module-nvconfig" }

[[bin]]
name = "stm32h743zi_playground"
test = false
bench = false


[profile.release]
codegen-units = 1 # better optimizations
debug = false # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z"